# Nucleo-F439ZI

./: .mxproject  .project  CMakeLists.txt  Makefile  Nucleo-F429ZI_UART.ioc  Nucleo-F439ZI.ioc  README.md  build.sh
Core/Inc/: cpp_code.hpp  default_task_logic.hpp  entry.hpp  main.h  stm32f4xx_hal_conf.h
Core/Src/: calculator.cpp  cpp_code.cpp  crypto.cpp  entry.cpp  main.c  stm32f4xx_hal_msp.c
Drivers/CMSIS/Lib/: .gitignore
cmake/toolchain/: toolchain.stm32f4.cmake
